--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>React Transform Boilerplate</title>
   </head>
   <body>
-    <div id='root'>
+    <div id="root">
     </div>
     <script src="/static/bundle.js"></script>
   </body>
